<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>VisPrefsDialog</class>
 <widget class="QDialog" name="VisPrefsDialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>188</width>
    <height>296</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Visualisation Settings</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_4">
   <item>
    <widget class="QGroupBox" name="LightBox">
     <property name="title">
      <string>Additional Illumination</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <widget class="QCheckBox" name="lightAboveBox">
        <property name="text">
         <string>Light from above</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QCheckBox" name="lightBelowBox">
        <property name="text">
         <string>Light from below</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="ColorBox">
     <property name="title">
      <string>Background Colour</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <widget class="ColorPickerPushButton" name="bgColorButton">
        <property name="text">
         <string>(255,255,255)</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="SuperelevationBox">
     <property name="title">
      <string>Superelevation</string>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QLineEdit" name="superelevationLineEdit">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="toolTip">
         <string>Specify the superelevation factor. Click on the button to apply.</string>
        </property>
        <property name="text">
         <string>1</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="superelevationPushButton">
        <property name="text">
         <string>Apply</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="ViewUpdateBox">
     <property name="title">
      <string>View Update</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <widget class="QCheckBox" name="loadShowAllCheckBox">
        <property name="toolTip">
         <string>Resizes view to show the entire scene when loading new data.</string>
        </property>
        <property name="text">
         <string>Reset view on load</string>
        </property>
        <property name="checked">
         <bool>true</bool>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QPushButton" name="closePushButton">
     <property name="text">
      <string>Close</string>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ColorPickerPushButton</class>
   <extends>QPushButton</extends>
   <header>ColorPickerPushButton.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>closePushButton</sender>
   <signal>clicked()</signal>
   <receiver>VisPrefsDialog</receiver>
   <slot>close()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>93</x>
     <y>275</y>
    </hint>
    <hint type="destinationlabel">
     <x>93</x>
     <y>147</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
